fixed mobile rendering and dark mode colors'

--- a/assets/css/all-project-colors.css
+++ b/assets/css/all-project-colors.css
@@ -12,23 +12,23 @@
     .Solemates-Primary-Background{
         background-color: #E799B3;
     }
-    .Nuts-For-Reading-Primary-Color{
+    .Nuts-For-Reading-Primary-Background{
         background-color: #FF9900;
     }
     .Zurn-Elkay-Primary-Color{
-        background-color: #60BBD8;
+        color: #60BBD8;
     }
     .Hocus-Focus-Primary-Color{
-        background-color: #8B7FB1;
+        color: #8B7FB1;
     }
     .Vorne-Primary-Color{
-        background-color: #6B97DE;
+        color: #6B97DE;
     }
     .Solemates-Primary-Color{
-        background-color: #E799B3;
+        color: #E799B3;
     }
     .Nuts-For-Reading-Primary-Color{
-        background-color: #FF9900;
+        color: #FF9900;
     }
 }
     
